SLT_Handler/Include/MMC/MMMCWHP220.h

INT API latch(INT bn);
INT API set_axis_runstop(INT bd_num,INT mode);
INT API get_axis_runstop(INT bd_num,pINT mode);
INT API set_endless_rotationax(INT ax, INT status, INT resolution);
INT API fset_endless_rotationax(INT ax, INT status, INT resolution);
INT API get_endless_rotationax(INT ax, pINT status);
INT API fget_endless_rotationax(INT ax, pINT status);
INT API set_endless_linearax(INT ax, INT status, INT resolution);
INT API fset_endless_linearax(INT ax, INT status, INT resolution);
INT API get_endless_linearax(INT ax, pINT status);
INT API fget_endless_linearax(INT ax, pINT status);
INT API set_endless_range(INT ax, DOUBLE range);
INT API fset_endless_range(INT ax, DOUBLE range);
INT API get_endless_range(INT ax, pDOUBLE range);
INT API fget_endless_range(INT ax, pDOUBLE range);
INT API set_linear_all_stop_flag(INT bd_num, INT mode);
INT API get_linear_all_stop_flag(INT bd_num, pINT mode);
INT API get_command_rpm(INT ax, pINT rpm_val);
INT API get_encoder_rpm(INT ax, pINT rpm_val);
INT API set_amp_resolution(INT ax, INT resolution);
INT API fset_amp_resolution(INT ax, INT resolution);
INT API get_amp_resolution(INT ax, pINT resolution);
INT API fget_amp_resolution(INT ax, pINT resolution);
INT API set_collision_prevent_flag(INT bd_num, INT mode);
INT API get_collision_prevent_flag(INT bd_num, pINT mode);
INT API set_collision_prevent(INT max, INT sax, INT add_sub, INT non_equal, DOUBLE c_pos);
INT API set_abs_encoder_type(INT ax, INT type);
INT API get_abs_encoder_type(INT ax, pINT type);
INT API set_fast_read_encoder(INT ax, INT status);
INT API get_fast_read_encoder(INT ax, pINT status);
INT API set_control_timer(INT bn, INT time);
INT API fset_control_timer(INT bn, INT time);
INT API get_control_timer(INT bn, pINT time);
INT API fget_control_timer(INT bn, pINT time);
INT API spl_move_data(INT spl_num, INT len, INT ax1, INT ax2, INT ax3, pDOUBLE pnt1, pDOUBLE pnt2, pDOUBLE pnt3, DOUBLE vel, INT acc);
INT API spl_movex(INT spl_num, INT ax1, INT ax2, INT ax3);
INT API spl_arc_movenax(INT len, pINT ax, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_line_movenax(INT len, pINT ax, pDOUBLE pnt, DOUBLE vel, INT acc);
INT API set_mmc_led_num(INT bn);
INT API get_mmc_led_num(INT bn, pINT led_num);
INT API get_fast_position(INT ax, pDOUBLE pos);
INT API set_encoder_ratioa(INT ax, INT ratioa);
INT API fset_encoder_ratioa(INT ax, INT ratioa);
INT API get_encoder_ratioa(INT ax, pINT ratioa);
INT API fget_encoder_ratioa(INT ax, pINT ratioa);
INT API set_encoder_ratiob(INT ax, INT ratiob);
INT API fset_encoder_ratiob(INT ax, INT ratiob);
INT API get_encoder_ratiob(INT ax, pINT ratiob);
INT API fget_encoder_ratiob(INT ax, pINT ratiob);
INT API set_analog_limit(INT ax, LONG voltage);
INT API fset_analog_limit(INT ax, LONG voltage);
INT API get_analog_limit(INT ax, pLONG voltage);
INT API fget_analog_limit(INT ax, pLONG voltage);
INT API set_position_lowpass_filter(INT ax, DOUBLE hz);
INT API fset_position_lowpass_filter(INT ax, DOUBLE hz);
INT API get_position_lowpass_filter(INT ax, pDOUBLE hz);
INT API fget_position_lowpass_filter(INT ax, pDOUBLE hz);
INT API set_velocity_lowpass_filter(INT ax, DOUBLE hz);
INT API fset_velocity_lowpass_filter(INT ax, DOUBLE hz);
INT API get_velocity_lowpass_filter(INT ax, pDOUBLE hz);
INT API fget_velocity_lowpass_filter(INT ax, pDOUBLE hz);
INT API set_position_notch_filter(INT ax, DOUBLE hz);
INT API fset_position_notch_filter(INT ax, DOUBLE hz);
INT API get_position_notch_filter(INT ax, pDOUBLE hz);
INT API fget_position_notch_filter(INT ax, pDOUBLE hz);
INT API set_velocity_notch_filter(INT ax, DOUBLE hz);
INT API fset_velocity_notch_filter(INT ax, DOUBLE hz);
INT API get_velocity_notch_filter(INT ax, pDOUBLE hz);
INT API fget_velocity_notch_filter(INT ax, pDOUBLE hz);
INT API set_mmc_parameter_init(INT ax);
INT API axis_all_status(INT ax, pINT istatus, pLONG lstatus, pDOUBLE dstatus);
INT API set_sensor_auto_off(INT ax, INT off);
INT API fset_sensor_auto_off(INT ax, INT off);
INT API get_sensor_auto_off(INT ax, pINT off);
INT API fget_sensor_auto_off(INT ax, pINT off);
INT API get_spline_move_num(INT bd_num, pINT num);
INT API set_servo_linear_flag(INT ax, INT l_flag);
INT API fset_servo_linear_flag(INT ax, INT l_flag);
INT API get_servo_linear_flag(INT ax, pINT l_flag);
INT API fget_servo_linear_flag(INT ax, pINT l_flag);
INT API spl_auto_line_move2ax(INT ax1, INT ax2, pDOUBLE pnt, DOUBLE vel, INT acc, INT auto_flag);
INT API spl_auto_line_move3ax(INT ax1, INT ax2, INT ax3, pDOUBLE pnt, DOUBLE vel, INT acc, INT auto_flag);
INT API spl_auto_arc_move2ax(INT ax1, INT ax2, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir, INT auto_flag);
INT API spl_auto_arc_move3ax(INT ax1, INT ax2, INT ax3, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir, INT auto_flag);
INT API spl_auto_arc_movenax(INT len, pINT ax, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir, INT auto_flag);
INT API spl_auto_line_movenax(INT len, pINT ax, pDOUBLE pnt, DOUBLE vel, INT acc, INT auto_flag);
INT API set_analog_direction(INT ax, INT dac_dir);
INT API fset_analog_direction(INT ax, INT dac_dir);
INT API get_analog_direction(INT ax, pINT dac_dir);
INT API fget_analog_direction(INT ax, pINT dac_dir);
INT API position_compare(INT index_sel, INT index_num, INT bitNo, INT ax1, INT ax2, INT latch, INT function, INT out_mode, DOUBLE pos, LONG time);
INT API position_compare_enable(INT bn, INT flag);
INT API position_compare_index_clear(INT bn, INT index);