SLT_Handler/Include/MMC/MMCWHP220.bas


Declare Function get_axis_runstop Lib "MMCWHP220.dll" (ByVal bdNum As Integer, n As Integer) As Integer
Declare Function set_axis_runstop Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal n As Integer) As Integer

Declare Function set_endless_rotationax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal mode As Integer, ByVal resolution As Integer) As Integer
Declare Function fset_endless_rotationax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal mode As Integer, ByVal resolution As Integer) As Integer
Declare Function get_endless_rotationax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ax As Integer, mode As Integer) As Integer
Declare Function fget_endless_rotationax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ax As Integer, mode As Integer) As Integer

Declare Function set_endless_linearax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal mode As Integer, ByVal resolution As Integer) As Integer
Declare Function fset_endless_linearax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal mode As Integer, ByVal resolution As Integer) As Integer
Declare Function get_endless_linearax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ax As Integer, mode As Integer) As Integer
Declare Function fget_endless_linearax Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ax As Integer, mode As Integer) As Integer
Declare Function set_endless_range Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal range As Double) As Integer
Declare Function fset_endless_range Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal range As Double) As Integer
Declare Function get_endless_range Lib "MMCWHP220.dll" (ByVal ax As Integer, range As Double) As Integer
Declare Function fget_endless_range Lib "MMCWHP220.dll" (ByVal ax As Integer, range As Double) As Integer

Declare Function set_linear_all_stop_flag Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal flag As Integer) As Integer
Declare Function get_linear_all_stop_flag Lib "MMCWHP220.dll" (ByVal ax As Integer, flag As Integer) As Integer

Declare Function get_command_rpm Lib "MMCWHP220.dll" (ByVal ax As Integer, rpm As Integer) As Integer
Declare Function get_encoder_rpm Lib "MMCWHP220.dll" (ByVal ax As Integer, rpm As Integer) As Integer

Declare Function set_amp_resolution Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal resolution As Integer) As Integer
Declare Function fset_amp_resolution Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal resolution As Integer) As Integer
Declare Function get_amp_resolution Lib "MMCWHP220.dll" (ByVal ax As Integer, resolution As Integer) As Integer
Declare Function fget_amp_resolution Lib "MMCWHP220.dll" (ByVal ax As Integer, resolution As Integer) As Integer

Declare Function set_collision_prevent_flag Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal mode As Integer) As Integer
Declare Function get_collision_prevent_flag Lib "MMCWHP220.dll" (ByVal bdNum As Integer, mode As Integer) As Integer
Declare Function set_collision_prevent Lib "MMCWHP220.dll" (ByVal max As Integer, ByVal sax As Integer, ByVal add_sub As Integer, ByVal non_equal As Integer, ByVal c_pos As Double) As Integer

Declare Function set_abs_encoder_type Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ntype As Integer) As Integer
Declare Function get_abs_encoder_type Lib "MMCWHP220.dll" (ByVal ax As Integer, ntype As Integer) As Integer

Declare Function set_fast_read_encoder Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal status As Integer) As Integer
Declare Function get_fast_read_encoder Lib "MMCWHP220.dll" (ByVal ax As Integer, status As Integer) As Integer

Declare Function set_control_timer Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal ntime As Integer) As Integer
Declare Function fset_control_timer Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal ntime As Integer) As Integer
Declare Function get_control_timer Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ntime As Integer) As Integer
Declare Function fget_control_timer Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ntime As Integer) As Integer
Declare Function spl_move_data Lib "MMCWHP220.dll" (ByVal spl_num As Integer, ByVal nlen As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, pnt1 As Double, pnt2 As Double, pnt3 As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_movex Lib "MMCWHP220.dll" (ByVal splNum As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer) As Integer
Declare Function spl_arc_movenax Lib "MMCWHP220.dll" (ByVal axlen As Integer, axes As Integer, ByVal x_center As Double, ByVal y_center As Double, pnt As Double, ByVal vel As Double, ByVal acc As Integer, ByVal cdir As Integer) As Integer
Declare Function spl_line_movenax Lib "MMCWHP220.dll" (ByVal axlen As Integer, axes As Integer, pnt As Double, ByVal vel As Double, ByVal acc As Integer) As Integer

Declare Function set_mmc_led_num Lib "MMCWHP220.dll" (ByVal bdNum As Integer) As Integer
Declare Function get_mmc_led_num Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ledNum As Integer) As Integer
Declare Function get_fast_position Lib "MMCWHP220.dll" (ByVal ax As Integer, pos As Double) As Integer

Declare Function set_encoder_ratioa Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ratioa As Integer) As Integer
Declare Function fset_encoder_ratioa Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ratioa As Integer) As Integer
Declare Function get_encoder_ratioa Lib "MMCWHP220.dll" (ByVal ax As Integer, ratioa As Integer) As Integer
Declare Function fget_encoder_ratioa Lib "MMCWHP220.dll" (ByVal ax As Integer, ratioa As Integer) As Integer

Declare Function set_encoder_ratiob Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ratiob As Integer) As Integer
Declare Function fset_encoder_ratiob Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal ratiob As Integer) As Integer
Declare Function get_encoder_ratiob Lib "MMCWHP220.dll" (ByVal ax As Integer, ratiob As Integer) As Integer
Declare Function fget_encoder_ratiob Lib "MMCWHP220.dll" (ByVal ax As Integer, ratiob As Integer) As Integer

Declare Function set_analog_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal voltage As Long) As Integer
Declare Function fset_analog_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal voltage As Long) As Integer
Declare Function get_analog_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, voltage As Long) As Integer
Declare Function fget_analog_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, voltage As Long) As Integer

Declare Function set_position_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function fset_position_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function get_position_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer
Declare Function fget_position_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer

Declare Function set_velocity_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function fset_velocity_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function get_velocity_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer
Declare Function fget_velocity_lowpass_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer

Declare Function set_position_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function fset_position_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function get_position_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer
Declare Function fget_position_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer

Declare Function set_velocity_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function fset_velocity_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal HZ As Double) As Integer
Declare Function get_velocity_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer
Declare Function fget_velocity_notch_filter Lib "MMCWHP220.dll" (ByVal ax As Integer, HZ As Double) As Integer

Declare Function set_mmc_parameter_init Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function axis_all_status Lib "MMCWHP220.dll" (ByVal ax As Integer, istatus As Integer, lstatus As Long, dstatus As Double) As Integer

Declare Function set_sensor_auto_off Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal offFlag As Integer) As Integer
Declare Function fset_sensor_auto_off Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal offFlag As Integer) As Integer
Declare Function get_sensor_auto_off Lib "MMCWHP220.dll" (ByVal ax As Integer, offFlag As Integer) As Integer
Declare Function fget_sensor_auto_off Lib "MMCWHP220.dll" (ByVal ax As Integer, offFlag As Integer) As Integer
Declare Function get_spline_move_num Lib "MMCWHP220.dll" (ByVal bdNum As Integer, num As Integer) As Integer

Declare Function set_servo_linear_flag Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal linearFlag As Integer) As Integer
Declare Function fset_servo_linear_flag Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal linearFlag As Integer) As Integer
Declare Function get_servo_linear_flag Lib "MMCWHP220.dll" (ByVal ax As Integer, linearFlag As Integer) As Integer
Declare Function fget_servo_linear_flag Lib "MMCWHP220.dll" (ByVal ax As Integer, linearFlag As Integer) As Integer

Declare Function spl_auto_line_move2ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, pntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal AutoOffFlag As Integer) As Integer
Declare Function spl_auto_line_move3ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, pntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal AutoOffFlag As Integer) As Integer
Declare Function spl_auto_arc_move2ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal xc As Double, ByVal yc As Double, pntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal Dir As Integer, ByVal AutoOffFlag As Integer) As Integer
Declare Function spl_auto_arc_move3ax Lib "MMCWHP220.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal xc As Double, ByVal yc As Double, pntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal Dir As Integer, ByVal AutoOffFlag As Integer) As Integer
Declare Function spl_auto_arc_movenax Lib "MMCWHP220.dll" (ByVal nax As Integer, axes As Integer, ByVal xc As Double, ByVal yc As Double, pntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal Dir As Integer, ByVal AutoOffFlag As Integer) As Integer
Declare Function spl_auto_line_movenax Lib "MMCWHP220.dll" (ByVal nax As Integer, axes As Integer, pntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal AutoOffFlag As Integer) As Integer

Declare Function set_analog_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal Dir As Integer) As Integer
Declare Function fset_analog_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal Dir As Integer) As Integer
Declare Function get_analog_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, Dir As Integer) As Integer
Declare Function fget_analog_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, Dir As Integer) As Integer

Declare Function position_compare Lib "MMCWHP220.dll" (ByVal index_sel As Integer, ByVal index_num As Integer, ByVal bitNo As Integer, ByVal ax As Integer, ByVal latch As Integer, ByVal nfunction As Integer, ByVal pos As Double, ByVal time As Long) As Integer
Declare Function position_compare_enable Lib "MMCWHP220.dll" (ByVal bn As Integer, ByVal flag As Integer) As Integer
Declare Function position_compare_index_clear Lib "MMCWHP220.dll" (ByVal bn As Integer, ByVal index As Integer) As Integer
